# pulseaudio-airplay2

./: Dockerfile
.github/workflows/: github-actions-push-master.yml  github-actions-push.yml
misc/: Dockerfile  Makefile
src/: module-airplay-discover.c  module-airplay-sink.c
src/modules/: meson.build
src/modules/airplay2/: meson.build  module-airplay-discover.c
